# bwtool

./: Makefile.am  Makefile.in  README  README.md  bwtool.h  bwtool_shared.h  config.h.in  configure  configure.ac
tests/: Makefile.in
